# WebToMD

./: .gitignore  LICENSE  README.md  WORKLOG.md  pyproject.toml
.cursor/rules/: git-commits.mdc
.github/workflows/: ci.yml  release.yml
scripts/: publish.sh  record-demo.sh
tests/: test_ai.py  test_config.py  test_converter.py  test_fetcher.py  test_output.py
tests/fixtures/: expected_output.md  sample_spa.html  sample_static.html
ui-samples/: linear-tokens.json  linear-v2.md  linear.md  notion-v2.md  notion.md  stripe-report.html  stripe-v2.md  stripe.md  tailwind-v2.md  tailwind-v3.md  tailwind.md  vercel-v2.md  vercel.md
webtomd/: __init__.py  __main__.py  _compat.py  cli.py  config.py  converter.py  crawler.py  easter_egg.py  fetcher.py  output.py  renderer.py  ui_extractor.py  ui_style_guide.py  utils.py
webtomd/ai/: __init__.py  base.py  configure.py  detector.py  naming.py  prompts.py  providers.py
