[project]
name = "webtomd"
version = "0.1.0"
description = "Web to Markdown. No garbage."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Prabhat" }]
keywords = ["cli", "markdown", "web-scraping", "converter", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "typer>=0.12",
    "trafilatura>=1.12",
    "readability-lxml>=0.8",
    "markdownify>=0.13",
    "rich>=13",
    "pyperclip>=1.9",
    "pynput>=1.7",
    "httpx>=0.27",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
anthropic  = ["anthropic>=0.40"]
openai     = ["openai>=1.0"]
gemini     = ["google-generativeai>=0.8"]
groq       = ["groq>=0.9"]
playwright = ["playwright>=1.44"]
ai-all     = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "groq>=0.9",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
webtomd = "webtomd.cli:app"

[project.urls]
Homepage   = "https://github.com/prabhat/webtomd"
Repository = "https://github.com/prabhat/webtomd"
Issues     = "https://github.com/prabhat/webtomd/issues"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
